--- a/app/app-api-server/src/docs/asciidoc/index.adoc
+++ b/app/app-api-server/src/docs/asciidoc/index.adoc
@@ -2,15 +2,97 @@ ifndef::snippets[]
 :snippets: ../../build/generated-snippets
 endif::[]
 
-= JustShop REST API 문서
+= JustShop REST API
 :doctype: book
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
 :toclevels: 2
 :sectlinks:
+:operation-curl-request-title: Example request
+:operation-http-response-title: Example response
 
-[[Member-API]]
-== Member API
+[[overview]]
+== 공통 사항
+
+본 REST API에서 사용하는 전체 규칙입니다.
+
+[[overview-url]]
+=== URL
+
+|===
+| 환경 | Domain
+
+// TODO : 추후 배포 후 도메인 변경 필요
+| 운영서버
+| `https://localhost:8080`
+|===
+
+[[overview-http-verbs]]
+=== HTTP 동사
+
+본 REST API에서 사용하는 HTTP 동사(verbs)는 REST 규약을 따릅니다.
+
+|===
+| 동사 | 용례
+
+| `GET`
+| 리소스를 가져올 때 사용
+
+| `POST`
+| 새 리소스를 만들 때 사용
+
+| `PUT`
+| 기존 리소스를 수정할 때 사용
+
+| `PATCH`
+| 기존 리소스의 일부를 수정할 때 사용
+
+| `DELETE`
+| 기존 리소스를 삭제할 떄 사용
+|===
+
+[[overview-http-status-codes]]
+=== HTTP 상태 코드
+
+본 REST API에서 사용하는 HTTP 상태 코드는 가능한 표준 HTTP 규약을 따릅니다.
+
+|===
+| 상태 코드 | 의미
+
+| `200 OK`
+| 요청을 성공적으로 처리함
+
+| `201 Created`
+| 새 리소스를 성공적으로 생성함. 응답의 `Location` 헤더에 해당 리소스의 URI가 담겨있다.
+
+| `204 No Content`
+| 기존 리소스를 성공적으로 수정함.
+
+| `400 Bad Request`
+| 잘못된 요청을 보낸 경우. 응답 본문에 더 오류에 대한 정보가 담겨있다.
+
+| `404 Not Found`
+| 요청한 리소스가 없음.
+|===
+
+[[overview-http-message]]
+=== HTTP 메시지 Spec
+
+본 REST API에서 사용하는 HTTP 메시지의 명세 표기(case) 규칙입니다.
+
+|===
+| 대상 | 표기(Case)
+
+| `Path Variable`
+| Kebab case
+
+| `Query Parameter`
+| Camel case
+
+| `Payload`
+| Snake case
+|===
+
+// member
 include::api/member/member.adoc[]
-
