--- a/module-app/member-service/src/docs/asciidoc/api/member/member.adoc
+++ b/module-app/member-service/src/docs/asciidoc/api/member/member.adoc
@@ -1,6 +1,69 @@
+[[Member]]
+=== 회원가입
 ==== HTTP Request
 include::{snippets}/member-create/http-request.adoc[]
 include::{snippets}/member-create/request-fields.adoc[]
 
 ==== HTTP Response
 include::{snippets}/member-create/http-response.adoc[]
+
+
+=== 로그인
+==== HTTP Request
+// include::{snippets}/member-auth/http-request.adoc[]
+// include::{snippets}/member-auth/request-fields.adoc[]
+
+==== HTTP Response
+// include::{snippets}/member-auth/http-response.adoc[]
+// include::{snippets}/member-auth/response-fields.adoc[]
+
+=== 로그아웃
+==== HTTP Request
+// include::{snippets}/member-logout/http-request.adoc[]
+// include::{snippets}/member-logout/request-fields.adoc[]
+
+==== HTTP Response
+// include::{snippets}/member-logout/http-response.adoc[]
+// include::{snippets}/member-logout/response-fields.adoc[]
+
+
+=== 로그아웃
+==== HTTP Request
+// include::{snippets}/member-logout/request-fields.adoc[]
+// include::{snippets}/member-logout/http-request.adoc[]
+
+==== HTTP Response
+// include::{snippets}/member-logout/http-response.adoc[]
+// include::{snippets}/member-logout/response-fields.adoc[]
+
+
+=== 이메일 인증
+==== HTTP Request
+// include::{snippets}/member-auth-email/request-fields.adoc[]
+// include::{snippets}/member-auth-email/http-request.adoc[]
+
+==== HTTP Response
+// include::{snippets}/member-auth-email/http-response.adoc[]
+// include::{snippets}/member-auth-email/response-fields.adoc[]
+
+
+=== 닉네임 중복확인 체크
+==== HTTP Request
+// include::{snippets}/member-nickname-exist/request-fields.adoc[]
+// include::{snippets}/member-nickname-exist/http-request.adoc[]
+
+==== HTTP Response
+// include::{snippets}/member-nickname-exist/http-response.adoc[]
+// include::{snippets}/member-nickname-exist/response-fields.adoc[]
+
+
+=== 이메일 중복확인 체크
+==== HTTP Request
+// include::{snippets}/member-email-exist/request-fields.adoc[]
+// include::{snippets}/member-email-exist/http-request.adoc[]
+
+==== HTTP Response
+// include::{snippets}/member-email-exist/http-response.adoc[]
+// include::{snippets}/member-email-exist/response-fields.adoc[]
+
+
