--- a/module-app/order-service/src/docs/asciidoc/api/order/order.adoc
+++ b/module-app/order-service/src/docs/asciidoc/api/order/order.adoc
@@ -1,10 +1,19 @@
 [[Order]]
 === 주문
 ==== HTTP Request
-// include::{snippets}/member-auth/http-request.adoc[]
-// include::{snippets}/member-auth/request-fields.adoc[]
+include::{snippets}/order-create/http-request.adoc[]
+include::{snippets}/order-create/request-fields.adoc[]
 
 ==== HTTP Response
-// include::{snippets}/member-auth/http-response.adoc[]
-// include::{snippets}/member-auth/response-fields.adoc[]
+include::{snippets}/order-create/http-response.adoc[]
+include::{snippets}/order-create/response-fields.adoc[]
 
+
+=== 주문 취소
+==== HTTP Request
+// include::{snippets}/order-update-status-cancel/http-request.adoc[]
+// include::{snippets}/order-update-status-cancel/request-fields.adoc[]
+
+==== HTTP Response
+// include::{snippets}/order-update-status-cancel/http-response.adoc[]
+// include::{snippets}/order-update-status-cancel/response-fields.adoc[]
