--- a/module-app/product-service/docs/asciidoc/api/product/product.adoc
+++ b/module-app/product-service/docs/asciidoc/api/product/product.adoc
@@ -1,10 +1,19 @@
 [[Order]]
-=== 상품 상세조회
+=== 주문된 상품정보 조회
 ==== HTTP Request
-// include::{snippets}/member-auth/http-request.adoc[]
-// include::{snippets}/member-auth/request-fields.adoc[]
+include::{snippets}/product-get-order-info/http-request.adoc[]
 
 ==== HTTP Response
-// include::{snippets}/member-auth/http-response.adoc[]
-// include::{snippets}/member-auth/response-fields.adoc[]
+include::{snippets}/product-get-order-info/http-response.adoc[]
+include::{snippets}/product-get-order-info/response-fields.adoc[]
 
+
+[[Product]]
+=== 상품 상세조회
+==== HTTP Request
+// include::{snippets}/product-get/http-request.adoc[]
+// include::{snippets}/product-get/request-fields.adoc[]
+
+==== HTTP Response
+// include::{snippets}/product-get/http-response.adoc[]
+// include::{snippets}/product-get/response-fields.adoc[]
