--- a/module-app/category-service/src/docs/asciidoc/api/category/category.adoc
+++ b/module-app/category-service/src/docs/asciidoc/api/category/category.adoc
@@ -1,10 +1,10 @@
-[[Order]]
-=== 주문
+[[Category]]
+
+=== 카테고리 목록 조회
 ==== HTTP Request
-// include::{snippets}/member-auth/http-request.adoc[]
-// include::{snippets}/member-auth/request-fields.adoc[]
+include::{snippets}/category-get-all/http-request.adoc[]
 
 ==== HTTP Response
-// include::{snippets}/member-auth/http-response.adoc[]
-// include::{snippets}/member-auth/response-fields.adoc[]
+include::{snippets}/category-get-all/http-response.adoc[]
+include::{snippets}/category-get-all/response-fields.adoc[]
 
