--- a/module-app/member-service/src/docs/asciidoc/api/member/member.adoc
+++ b/module-app/member-service/src/docs/asciidoc/api/member/member.adoc
@@ -1,4 +1,6 @@
-[[Member]]
+[[JustShop-Member-External-API]]
+== External
+
 === 회원가입
 ==== HTTP Request
 include::{snippets}/member-create/http-request.adoc[]
@@ -26,15 +28,6 @@ include::{snippets}/member-create/http-response.adoc[]
 ==== HTTP Response
 // include::{snippets}/member-logout/http-response.adoc[]
 // include::{snippets}/member-logout/response-fields.adoc[]
-
-
-=== 회원정보 조회
-==== HTTP Request
-include::{snippets}/member-get-my-info/http-request.adoc[]
-
-==== HTTP Response
-include::{snippets}/member-get-my-info/http-response.adoc[]
-include::{snippets}/member-get-my-info/response-fields.adoc[]
 
 
 === 비밀번호 변경
@@ -80,34 +73,72 @@ include::{snippets}/member-get-exists-email/http-request.adoc[]
 include::{snippets}/member-get-exists-email/http-response.adoc[]
 include::{snippets}/member-get-exists-email/response-fields.adoc[]
 
-
-=== 이메일 인증
+=== 회원 배송지 생성
 ==== HTTP Request
-// include::{snippets}/member-auth-email/request-fields.adoc[]
-// include::{snippets}/member-auth-email/http-request.adoc[]
+include::{snippets}/member-delivery-addresses-create/request-fields.adoc[]
+include::{snippets}/member-delivery-addresses-create/http-request.adoc[]
 
 ==== HTTP Response
-// include::{snippets}/member-auth-email/http-response.adoc[]
-// include::{snippets}/member-auth-email/response-fields.adoc[]
+include::{snippets}/member-delivery-addresses-create/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-create/response-fields.adoc[]
 
-
-=== 닉네임 중복확인 체크
+=== 회원의 배송지 수정
 ==== HTTP Request
-// include::{snippets}/member-nickname-exist/request-fields.adoc[]
-// include::{snippets}/member-nickname-exist/http-request.adoc[]
+include::{snippets}/member-delivery-addresses-update/request-fields.adoc[]
+include::{snippets}/member-delivery-addresses-update/http-request.adoc[]
 
 ==== HTTP Response
-// include::{snippets}/member-nickname-exist/http-response.adoc[]
-// include::{snippets}/member-nickname-exist/response-fields.adoc[]
+include::{snippets}/member-delivery-addresses-update/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-update/response-fields.adoc[]
 
 
-=== 이메일 중복확인 체크
+=== 회원의 배송지 삭제
 ==== HTTP Request
-// include::{snippets}/member-email-exist/request-fields.adoc[]
-// include::{snippets}/member-email-exist/http-request.adoc[]
+include::{snippets}/member-delivery-addresses-delete/http-request.adoc[]
 
 ==== HTTP Response
-// include::{snippets}/member-email-exist/http-response.adoc[]
-// include::{snippets}/member-email-exist/response-fields.adoc[]
+include::{snippets}/member-delivery-addresses-delete/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-delete/response-fields.adoc[]
+
+=== 기본배송지로 변경
+==== HTTP Request
+include::{snippets}/member-delivery-addresses-update-basic-yn/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/member-delivery-addresses-update-basic-yn/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-update-basic-yn/response-fields.adoc[]
+
+=== 회원 배송지 존재 여부 조회
+==== HTTP Request
+include::{snippets}/member-delivery-addresses-get-exists/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/member-delivery-addresses-get-exists/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-get-exists/response-fields.adoc[]
+
+=== 회원의 배송지 상세 조회
+==== HTTP Request
+include::{snippets}/member-delivery-addresses-get-one/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/member-delivery-addresses-get-one/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-get-one/response-fields.adoc[]
+
+=== 회원의 배송지 목록 조회
+==== HTTP Request
+include::{snippets}/member-delivery-addresses-get-all/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/member-delivery-addresses-get-all/http-response.adoc[]
+include::{snippets}/member-delivery-addresses-get-all/response-fields.adoc[]
 
 
+[[JustShop-Member-Internal-API]]
+== Internal
+=== 회원정보 조회
+==== HTTP Request
+include::{snippets}/member-get-my-info/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/member-get-my-info/http-response.adoc[]
+include::{snippets}/member-get-my-info/response-fields.adoc[]
