--- a/module-app/product-service/src/docs/asciidoc/api/product/product.adoc
+++ b/module-app/product-service/src/docs/asciidoc/api/product/product.adoc
@@ -1,4 +1,3 @@
-[[Order]]
 === 주문된 상품정보 조회
 ==== HTTP Request
 include::{snippets}/product-get-order-info/http-request.adoc[]
@@ -8,7 +7,6 @@ include::{snippets}/product-get-order-info/http-response.adoc[]
 include::{snippets}/product-get-order-info/response-fields.adoc[]
 
 
-[[Product]]
 === 상품 상세조회
 ==== HTTP Request
 include::{snippets}/product-get/http-request.adoc[]
@@ -16,3 +14,22 @@ include::{snippets}/product-get/http-request.adoc[]
 ==== HTTP Response
 include::{snippets}/product-get/http-response.adoc[]
 include::{snippets}/product-get/response-fields.adoc[]
+
+
+=== 검색 조건에 따른 상품 목록 페이지 조회
+==== HTTP Request
+include::{snippets}/products-get/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/products-get/http-response.adoc[]
+include::{snippets}/products-get/response-fields.adoc[]
+
+
+=== 해당 카테고리의 검색조건에 따른 상품 목록 페이지 조회
+==== HTTP Request
+include::{snippets}/products-get-by-categoryId/http-request.adoc[]
+
+==== HTTP Response
+include::{snippets}/products-get-by-categoryId/http-response.adoc[]
+include::{snippets}/products-get-by-categoryId/response-fields.adoc[]
+
